<resources>
    <string name="app_name">CarBt</string>
    <string name="title_key">Key</string>
    <string name="title_scanner">Scanner</string>
    <string name="title_settings">Settings</string>
    <string name="bt_scan">Scan</string>
    <string name="car_start">Start</string>
    <string name="car_windows_down">Down</string>
    <string name="car_windows_up">Up</string>
    <string name="car_warning_lights">Hazard Lights</string>
    <string name="car_flash_headlights">Flash Headlights</string>

    <string name="start_scan_text">Press "Scan" to start scanning</string>
    <string name="scanning_text">Scanning…</string>
    <string name="connecting_text">Connecting…</string>
    <string name="connected_text">Connected!</string>
    <string name="scan_done_1">Done, found </string>
    <string name="scan_done_2"> devices</string>
</resources>